--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build2-css": "node-sass --include-path scss scss/mainV.scss css/mainV.css",
     "watch2-css": "nodemon -e scss -x \"npm run build2-css\"",
     "build3-css": "node-sass --include-path scss scss/mainF.scss css/mainF.css",
-    "watch3-css": "nodemon -e scss -x \"npm run build3-css\""
+    "watch3-css": "nodemon -e scss -x \"npm run build3-css\"",
+    "build4-css": "node-sass --include-path scss scss/mainR.scss css/mainR.css",
+    "watch4-css": "nodemon -e scss -x \"npm run build4-css\""
   },
   "author": "",
   "license": "ISC",
