--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-css": "node-sass --include-path scss scss/main.scss css/main.css",
+    "build-css": "node-sass --include-path scss scss/menu.scss css/menu.css",
     "watch-css": "nodemon -e scss -x \"npm run build-css\"",
     "build2-css": "node-sass --include-path scss scss/mainV.scss css/mainV.css",
     "watch2-css": "nodemon -e scss -x \"npm run build2-css\"",
